# StratusDetection

./: .gitignore  2025-06-24.md  2025-06-31.md  README.md  add_idaweb_data.py  compute_time_delta.py  ct_interactive_map_optimized.html  daily_cluster_memberships.csv  data_loader.py  grouped_summary_by_day.csv  inference.py  inference_multiple.py  inference_sbatch.sh  job_sbatch.sh  metrics.py  model.py  notes.md  prepareData.py  prepare_data_inference.py  preparedatainference.py  prepocessing.py  pyproject.toml  report.md  rules.def  stats.npy  test.ipynb  test.py  test_data.npz  train_sbatch.sh  training.py
data_tools/: compute_time_delta.py  data_augmentation.py  generate_data.py  test.py
docs/: 2025-06-31.md  research.md
metrics_analysis/: config.py  metrics.py  plotting.py  transitions.py
my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
prepare_data/: CT_exam.py  add_idaweb_data.py  compute_time_delta.py  data_augmentation.py  prepocessing.py  test.py  test_crop_img.py  test_data_refractor.py
